# qcar2_control

./: CMakeLists.txt  README.md  package.xml  qlabs_stage.py  setup.cfg  setup.py
include/qcar2_control/: bezier.hpp  lpv_hinf_runtime.hpp  lpv_hinf_v3_data.hpp  ph_runtime.hpp
launch/: bezier_vfg_control.launch.py  ph_scalecar_hinf_control.launch.py  ph_vfg_control.launch.py  ph_vfg_h_infinite.launch.py
qcar2_control/: __init__.py  bezier_path_publisher.py  dashboard.py  ph_path_publisher.py  scalecar_hinf_path_follower.py
qcar2_control/scalecar_vfg/: __init__.py
qcar2_control/scalecar_vfg/controllers/: __init__.py  base.py  lpv_hinf.py  pid_ff.py
qcar2_control/scalecar_vfg/data/: __init__.py
qcar2_control/scalecar_vfg/data/controllers/: __init__.py  lpv_hinf_v3.json
qcar2_control/scalecar_vfg/guidance/: __init__.py  path_projector.py  vfg.py
qcar2_control/scalecar_vfg/paths/: __init__.py  path_base.py
scripts/: bezier_path_publisher  dashboard  ph_path_publisher  scalecar_hinf_path_follower
src/: h_inf_controller_ph.cpp  lpv_hinf_runtime.cpp  lpv_hinf_v3_data.cpp  ph_runtime.cpp  pid_controller.cpp  pid_controller_ph.cpp  vfg_guidance.cpp  vfg_guidance_ph.cpp
